--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "sweetalert2": "^11.16.0"
   }
 }
